# libgputk

./: CMakeLists.txt  README.md  sources.cmake
src/: gputk.h  gputkLogger.cpp  gputkSolution.cpp  gputkTimer.cpp  gputkUtils.h
